<resources>
    <string name="app_name">Wassap</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="user">User</string>
    <string name="phone">Phone</string>
    <string name="update">Update</string>
    <string name="account_type">Account type</string>
    <string name="error_username">The username cant be empty</string>
    <string name="confirmar_update">Do you really want to update the data?</string>
    <string name="update_user">Update user</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="wait_data">Wait, the app is loading data</string>
    <string name="logout">Log out</string>
    <string name="confirm_logout">Confirm logout</string>
    <string name="exit">exit</string>
    <string name="confirm_exit">Confirm exit</string>
    <string name="new_chat">New chat</string>
    <string name="chat">Chat</string>
    <string name="user_profile">User profile</string>
</resources>