<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/login">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.practicamensajes.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_chatMessageFragment"
            app:destination="@id/chatMessageFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_user"
        android:name="com.example.practicamensajes.ui.User.UserFragment"
        android:label="@string/user"
        tools:layout="@layout/fragment_user" />

    <fragment
        android:id="@+id/login"
        android:name="com.example.practicamensajes.ui.Login"
        android:label="@string/login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_login_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/listaUsuarios"
        android:name="com.example.practicamensajes.ui.ListaUsuarios"
        android:label="@string/new_chat"
        tools:layout="@layout/fragment_lista_usuarios_list" >
        <action
            android:id="@+id/action_listaUsuarios_to_chatMessageFragment"
            app:destination="@id/chatMessageFragment" />
    </fragment>
    <action android:id="@+id/action_global_listaUsuarios" app:destination="@id/listaUsuarios" />
    <fragment
        android:id="@+id/chatMessageFragment"
        android:name="com.example.practicamensajes.ui.ChatMessageFragment"
        android:label="@string/chat" >
        <action
            android:id="@+id/action_chatMessageFragment_to_userPreview"
            app:destination="@id/userPreview" />
    </fragment>
    <fragment
        android:id="@+id/userPreview"
        android:name="com.example.practicamensajes.ui.User.UserPreview"
        android:label="@string/user_profile" /><action android:id="@+id/action_global_login" app:destination="@id/login"/>
</navigation>